# survey-platform

./: .gitignore  stack.yaml  survey-platform.cabal
.stack-work/: stack.sqlite3
.stack-work/install/x86_64-linux/2e874418177df08fb38d4c0455c88ea8676f779e1b1b6f0c1941547c6e86f05c/9.8.4/lib/x86_64-linux-ghc-9.8.4/survey-platform-0.1.0.0-65T2q7NaJTAJlxO0ebzaHM/: Foundation.dyn_hi  Foundation.hi  Model.dyn_hi  Model.hi
.stack-work/install/x86_64-linux/2e874418177df08fb38d4c0455c88ea8676f779e1b1b6f0c1941547c6e86f05c/9.8.4/lib/x86_64-linux-ghc-9.8.4/survey-platform-0.1.0.0-65T2q7NaJTAJlxO0ebzaHM/Forms/: Survey.dyn_hi  Survey.hi
.stack-work/install/x86_64-linux/2e874418177df08fb38d4c0455c88ea8676f779e1b1b6f0c1941547c6e86f05c/9.8.4/lib/x86_64-linux-ghc-9.8.4/survey-platform-0.1.0.0-65T2q7NaJTAJlxO0ebzaHM/Types/: Core.dyn_hi  Core.hi  Logic.dyn_hi  Logic.hi  Survey.dyn_hi  Survey.hi
.stack-work/install/x86_64-linux/2e874418177df08fb38d4c0455c88ea8676f779e1b1b6f0c1941547c6e86f05c/9.8.4/lib/x86_64-linux-ghc-9.8.4/survey-platform-0.1.0.0-FNfjCQ592Sb8uiGbrEniKu/: Foundation.dyn_hi
.stack-work/install/x86_64-linux/2e874418177df08fb38d4c0455c88ea8676f779e1b1b6f0c1941547c6e86f05c/9.8.4/lib/x86_64-linux-ghc-9.8.4/survey-platform-0.1.0.0-FNfjCQ592Sb8uiGbrEniKu/Forms/: Survey.hi
.stack-work/install/x86_64-linux/2e874418177df08fb38d4c0455c88ea8676f779e1b1b6f0c1941547c6e86f05c/9.8.4/lib/x86_64-linux-ghc-9.8.4/survey-platform-0.1.0.0-FNfjCQ592Sb8uiGbrEniKu/Types/: Core.dyn_hi  Core.hi  Survey.dyn_hi  Survey.hi
.stack-work/install/x86_64-linux/2e874418177df08fb38d4c0455c88ea8676f779e1b1b6f0c1941547c6e86f05c/9.8.4/pkgdb/: package.cache  survey-platform-0.1.0.0-FNfjCQ592Sb8uiGbrEniKu.conf
app/: Main.hs
src/: Cache.hs  Foundation.hs  Model.hs
src/Analytics/: CSV.hs  Engine.hs  Query.hs  Response.hs  Store.hs
src/Auth/: Authorise.hs
src/Distribution/: Email.hs
src/Forms/: Survey.hs
src/Logic/: Engine.hs
src/Submission/: Pipeline.hs  Store.hs
src/Types/: Auth.hs  Campaign.hs  Core.hs  Logic.hs  Survey.hs
src/Utils/: Conversion.hs
test/: Spec.hs
test/Analytics/: CSVSpec.hs  EngineSpec.hs  QuerySpec.hs  ResponseSpec.hs
test/Auth/: AuthoriseSpec.hs
test/Cache/: CacheSpec.hs
test/Distribution/: CampaignSpec.hs
test/Foundation/: HandlerSpec.hs
test/Logic/: EngineSpec.hs
test/Model/: SurveySpec.hs
test/Submission/: PipelineSpec.hs  StoreSpec.hs
