cabal-version:      2.4
name:               survey-platform
version:            0.1.0.0
description:        Survey and data collection platform

common shared-extensions
  default-language: Haskell2010
  default-extensions:
    BangPatterns
    DataKinds
    DeriveGeneric
    DerivingStrategies
    ExistentialQuantification
    FlexibleContexts
    FlexibleInstances
    GADTs
    LambdaCase
    MultiParamTypeClasses
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    StrictData
    TypeFamilies
    ViewPatterns
  ghc-options:
    -Wall
    -Wno-unused-do-bind

library
  import:           shared-extensions
  hs-source-dirs:   src
  exposed-modules:
    Types.Core
    Types.Logic
    Types.Survey
    Types.Campaign
    Model
    Forms.Survey
    Foundation
    Logic.Engine
    Analytics.Engine
    Analytics.CSV
    Distribution.Email
  build-depends:
    base                    >= 4.18,
    containers              >= 0.6,
    text                    >= 2.0,
    time                    >= 1.12,
    uuid                    >= 1.3,
    aeson                   >= 2.1,
    bytestring              >= 0.11,
    mtl                     >= 2.3,
    transformers            >= 0.6,
    persistent              >= 2.14,
    persistent-template     >= 2.12,
    persistent-postgresql   >= 2.13,
    yesod-core              >= 1.6,
    yesod-form              >= 1.7,
    yesod-persistent        >= 1.6,
    blaze-html              >= 0.9,
    template-haskell        >= 2.20,
    cassava                 >= 0.5.3,
    monad-logger            >= 0.3,
    resource-pool           >= 0.4,
    mime-mail               >= 0.5,
    smtp-mail               >= 0.3

executable survey-platform
  import:           shared-extensions
  main-is:          Main.hs
  hs-source-dirs:   app
  build-depends:
    base,
    survey-platform,
    yesod-core,
    warp,
    monad-logger,
    persistent-postgresql,
    persistent

test-suite survey-test
  import:           shared-extensions
  type:             exitcode-stdio-1.0
  main-is:          Spec.hs
  hs-source-dirs:   test
  other-modules:
    Model.SurveySpec
    Logic.EngineSpec
    Analytics.CSVSpec
    Analytics.EngineSpec
    Distribution.CampaignSpec
  build-depends:
    base,
    survey-platform,
    containers,
    text,
    bytestring,
    uuid,
    time,
    hspec            >= 2.11,
    hspec-hedgehog   >= 0.0.1,
    hedgehog         >= 1.4,
    QuickCheck       >= 2.14
